--- a/css/styles.css
+++ b/css/styles.css
@@ -73,8 +73,6 @@ button {
 
 /** ==============HEADER================ */
 
-.header {
-}
 .nav-wrapper {
   display: flex;
   align-items: center;
@@ -82,8 +80,6 @@ button {
 }
 
 .header-info-caption {
-  /* font-size: 18px; */
-  /* line-height: 1.94; */
   font-size: 12px;
   line-height: 1.1;
   color: #99b6c5;
@@ -92,8 +88,7 @@ button {
   padding-bottom: 8px;
   background-color: #00486d;
 }
-.header-navigation {
-}
+
 .navigation-list {
   display: none;
 }
@@ -107,15 +102,10 @@ button {
 .header-logo-icon {
   fill: #00486d;
 }
-.navigation-item {
-}
-.navigation-item-link {
-}
 .header-address {
   display: none;
 }
-.address-contact {
-}
+
 .header-btn-request {
   display: none;
 }
@@ -139,12 +129,8 @@ button {
 
 /** ==============HERO================ */
 
-.main {
-}
-
 .hero {
   position: relative;
-  /* width: 100%; */
   height: auto;
   overflow: hidden;
   background-image: linear-gradient(
@@ -237,6 +223,7 @@ line-height: 1.75; */
   transform: scale(1.05);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
+
 .hero-bkgnd-img {
   display: none;
 }
@@ -459,8 +446,8 @@ line-height: 1.75; */
 /** ==============ARTICLES================ */
 
 .recent-articles {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 .recent-articles-title {
   font-size: 26px;
@@ -522,7 +509,8 @@ line-height: 1.75; */
 
 .request-form {
   background-color: #e4ecf0;
-  padding: 150px 0;
+  /* padding: 150px 0; */
+  padding: 70px 0;
   width: 100%;
 }
 .request-form-question {
@@ -726,15 +714,326 @@ line-height: 1.75; */
 
 /** @@@@@@@@@@@@@-MEDIA-queries-@@@@@@@@@@@@@ */
 
-/* @media screen and (min-width: 428px) {
- 
+@media (min-width: 428px) {
+  .container {
+    width: 428px;
+  }
+}
+
+@media (min-width: 528px) {
+  .container {
+    width: 528px;
+  }
+
+  .recent-articles-item-img {
+    margin: 0 auto 20px;
+  }
+
+  h2 {
+    text-align: center;
+  }
+}
 
 /*? !!! Tablet !!! */
 
 @media (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+  .recent-articles-item-img {
+    margin: 0 0 20px;
+  }
+
+  h2 {
+    text-align: start;
+  }
+
+  /** ==============HEADER================ */
+  .nav-wrapper {
+    display: flex;
+  }
+
+  .header-info-caption {
+    font-size: 16px;
+    line-height: 1.94444;
+  }
+
+  .header-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+  }
+  .navigation-list {
+    display: flex;
+    align-items: baseline;
+    gap: 32px;
+  }
+  .header-logo {
+    display: flex;
+    align-items: center;
+    padding: 0;
+  }
+
+  .navigation-item {
+    font-size: 19px;
+    line-height: 1.84;
+    color: #00486d;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .navigation-item-link {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      background-color 300ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-radius 300ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .navigation-item-link:hover,
+  .navigation-item--link:focus {
+    color: #fff;
+    background-color: rgba(0, 72, 109, 1);
+    border-radius: 4px;
+    box-shadow: 0 0 0 6px rgba(0, 72, 109, 1);
+  }
+
+  .header-address {
+    display: block;
+    text-align: center;
+  }
+  .address-contact {
+    font-size: 17px;
+    line-height: 2.05882;
+    transition: text-decoration 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .address-contact:hover,
+  .address-contact:focus {
+    text-decoration: underline;
+  }
+
+  .header-btn-request {
+    display: block;
+    width: 190px;
+    font-size: 18px;
+    line-height: 1.94;
+    text-align: center;
+    color: #fff;
+    background-color: #00486d;
+    border: none;
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-btn-request:hover,
+  .header-btn-request:focus {
+    transform: scale(1.05);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  }
+
+  .mobile-menu-btn {
+    display: none;
+  }
+
+  /** ==============HERO================ */
+  .hero-wrapper {
+    background-color: #e4ecf0;
+    /* position: relative; */
+  }
+  .hero {
+    position: relative;
+    height: auto;
+    overflow: visible;
+    background-image: none;
+    box-shadow: none;
+  }
+
+  .hero-title-wrapper {
+    padding: 155px 0 176px 0;
+  }
+
+  .design-icon-bfr {
+    top: -145px;
+    left: -15px;
+    width: 208px;
+    height: 208px;
+    clip-path: inset(150px 0px 0px 0px);
+  }
+  .design-icon-aft {
+    bottom: 85px;
+    right: 280px;
+    width: 208px;
+    height: 208px;
+  }
+
+  .hero-title {
+    font-size: 45px;
+    margin-bottom: 25px;
+    max-width: 394px;
+  }
+
+  .hero-tagline {
+    font-size: 20px;
+    line-height: 1.5;
+    max-width: 330px;
+    margin-bottom: 35px;
+  }
+
+  .hero-btn-request {
+    font-size: 18px;
+    width: 234px;
+    height: 59px;
+    margin: 0;
+  }
+
+  .hero-bkgnd-img {
+    position: absolute;
+    display: block;
+    width: 50%;
+    height: auto;
+    box-shadow: 45px -36px 0px 0px rgba(0, 72, 109, 1),
+      0 32px 24px 0 rgba(0, 72, 109, 0.5);
+    z-index: 1;
+    top: 100px;
+    right: 35px;
+  }
+
+  /** ==============SERVICES================ */
+
+  .services {
+    padding: 160px 0;
+  }
+
+  .services-title {
+    font-size: 44px;
+  }
+
+  .services-caption {
+    margin-top: 25px;
+    margin-bottom: 51px;
+    font-size: 24px;
+    line-height: 1.75;
+  }
+
+  .services-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+  }
+
+  .services-item {
+    padding: 40px 35px;
+    flex-basis: calc((50% - 40px));
+  }
+
+  .services-item-icon {
+    margin-bottom: 40px;
+  }
+
+  .services-item-caption {
+    font-size: 22px;
+  }
+
+  .services-item-text {
+    font-size: 20px;
+    line-height: 1.75;
+    min-height: 175px;
+  }
+
+  .services-item-link {
+    display: block;
+    font-size: 19px;
+    line-height: 1.84;
+  }
+
+  /** ==============ABOUT================ */
 }
 
 /*? !!! Desktop !!! */
 
 @media (min-width: 1158px) {
+  .container {
+    width: 1158px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .header-info-caption {
+    font-size: 18px;
+  }
+
+  .header-contacts-info {
+    display: flex;
+    gap: 32px;
+    align-items: center;
+  }
+
+  .header-btn-request {
+    width: 234px;
+    height: 59px;
+  }
+
+  .design-icon-bfr {
+    top: -145px;
+    left: -15px;
+    width: 208px;
+    height: 208px;
+    clip-path: inset(150px 0px 0px 0px);
+  }
+  .design-icon-aft {
+    bottom: -120px;
+    right: 515px;
+    width: 208px;
+    height: 208px;
+  }
+
+  .hero-title {
+    font-size: 55px;
+  }
+
+  .hero-tagline {
+    font-size: 20px;
+    line-height: 1.75;
+    max-width: 450px;
+  }
+
+  .hero-bkgnd-img {
+    /* height: 752px; */
+    height: 724px;
+    width: auto;
+    box-shadow: 85px -56px 0px 0px rgba(0, 72, 109, 1),
+      0 32px 24px 0 rgba(0, 72, 109, 0.5);
+    top: 56px;
+    right: 85px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .container {
+    width: 1440px;
+    padding-left: 85px;
+    padding-right: 85px;
+  }
+
+  .hero-tagline {
+    font-size: 24px;
+    max-width: 563px;
+  }
+
+  .hero-bkgnd-img {
+    height: 752px;
+  }
+
+  .design-icon-bfr {
+    top: -145px;
+    left: 20px;
+  }
+
+  .design-icon-aft {
+    right: 535px;
+  }
 }
